tests/typing/fail/clock-05.stderr
error: Variable `c` is undefined.
 --> tests/typing/fail/clock-05.rs:8:27
  |
8 |         a : float = merge c {
  |                           ^
